Fix overflow-x bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,5 +6,7 @@
 
 main {
     min-height: 100vh;
+    overflow-x: hidden;
+    width: 100%;
 }
 
