--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
+.html{
+    overflow-x: hidden;
+    width: 100%;
+}
 
 .body{
     overflow-x: hidden;
