--- a/src/components/Components.module.css
+++ b/src/components/Components.module.css
@@ -255,7 +255,6 @@
   background-image: radial-gradient(#badbf0 1px, #f0f4f7 0);
   background-size: 30px 30px;
   background-position: -19px -19px;
-  box-shadow: '0px -15px 10px 0px rgba(200, 0, 0, 0.5)';
   background-color: #ffffff;
   border-radius: 15px;
   padding-left: 0;
